# fastbase65536

./: Cargo.toml  LICENSE  README.md  setup.py
fastbase65536/: __init__.py
src/: lib.rs
